Got rid of tags.

--- a/content/fp_virgin_learns_elm.html
+++ b/content/fp_virgin_learns_elm.html
@@ -3,7 +3,7 @@
 <title>FP virgin learns Elm</title>
 <meta name="date" content="2014-04-25 21:59" />
 <meta name="category" content="Functional Programming" />
-<meta name="tags" content="FP, FRP, Elm, Functional" />
+<!-- <meta name="tags" content="FP, FRP, Elm, Functional" /> -->
 <meta name="author" content="Scott Kensell" />
 <meta name="summary" content="Having no prior experience with functional programming, I participated in Prezi's Elm challenge where I had to build the game Snake in a week." />
 </head>
