--- a/content/fp_virgin_learns_elm.html
+++ b/content/fp_virgin_learns_elm.html
@@ -5,7 +5,7 @@
 <meta name="category" content="Functional Programming" />
 <!-- <meta name="tags" content="FP, FRP, Elm, Functional" /> -->
 <meta name="author" content="Scott Kensell" />
-<meta name="summary" content="Having no prior experience with functional programming, I participated in Prezi's Elm challenge where I had to build the game Snake in a week." />
+<meta name="summary" content="<p>Having no prior experience with functional programming, I participated in Prezi's Elm challenge where I had to build the game Snake in a week.</p>" />
 
 </head>
 
